--- a/volleyball.html
+++ b/volleyball.html
@@ -16,7 +16,7 @@
     </head>
 
     <header>
-        <img align="left" src="images/" alt="Volleyball Logo">
+        <img align="left" src="images/volleyball_logo.jpeg" alt="Volleyball Logo">
         <div>
             <h2><b>Volleyball AllStars</b> - Your #1 Volleyball Informative Website</h2>
         </div>
