--- a/html/history.html
+++ b/html/history.html
@@ -15,7 +15,7 @@
 </head>
 
 <header>
-    <img align="left" src="../images/" alt="Volleyball Logo" height="80">
+    <img align="left" src="../images/volleyball_logo.jpeg" alt="Volleyball Logo" height="80">
     <h2><b>Volleyball's History</b></h2>
 </header>
 
@@ -79,7 +79,7 @@
 </div>
 
     <div class="image">
-        <img src="../images/..." alt="History Picture">
+        <img src="../images/history_picture.png" alt="History Picture">
     </div>
 
     <h6><b><em>Fun Fact: Volleyball is 127 years old</em></b></h6>
