--- a/html/contact.html
+++ b/html/contact.html
@@ -15,7 +15,7 @@
 </head>
 
   <header>
-    <img align="left" src="../images/" alt="Volleyball Logo" height="80">
+    <img align="left" src="../images/volleyball_logo.jpeg" alt="Volleyball Logo" height="80">
     <h2><b> Volleyball's Contact Page</b></h2>
   </header>
 
