--- a/html/positions.html
+++ b/html/positions.html
@@ -15,7 +15,7 @@
 </head>
 
 <header>
-    <img  src="../images/" alt="Volleyball Logo" height="80">
+    <img  src="../images/volleyball_logo.jpeg" alt="Volleyball Logo" height="80">
     <h2><b>Volleyball Positions</b></h2>
 </header>
 
@@ -85,7 +85,7 @@
     <main>
 
         <div class="marginbox">
-            <img class="goRight" src="../images/" alt="Setter Position">
+            <img class="goRight" src="../images/setter.jpeg" alt="Setter Position">
             <h4>Setter</h4>
             <p class="alignText">The setter needs to have delicate hands to set the ball perfectly for one of hitters. They are the ones who
                 touch the ball the most and therefore, is the main contributor to the offense of the team.</p>
@@ -93,21 +93,21 @@
         </div>
 
         <div class="marginbox">
-            <img class="goLeft" src="../images/" alt="Outside Hitter">
+            <img class="goLeft" src="../images/outside_hitter.jpeg" alt="Outside Hitter">
             <h4>Outside Hitter</h4>
             <p>The outside hitter is known as the left-side hitter and is one of the main attackers in volleyball. They need
                 to be able to jump high and need to be able to hit in a variety of ways. </p>
         </div>
 
         <div class="marginbox">
-            <img class="goRight" src="../images/" alt="Opposite Hitter">
+            <img class="goRight" src="../images/opposite_hitter.jpeg" alt="Opposite Hitter">
             <h4>Opposite Hitter</h4>
             <p class="alignText">The opposite hitter is known as the right-side hitter and is another main attacker in volleyball. They need to
                 be able to play both defense and offense. They also need to be able to jump high and high in different angles.</p>
         </div>
 
         <div class="marginbox">
-            <img class="goLeft" src="../images/" alt="Middle Blocker">
+            <img class="goLeft" src="../images/middle_blocker.jpeg" alt="Middle Blocker">
             <h4>Middle Blocker</h4>
             <p>The middle blocker is also known as the middle hitter and is usually the tallest player on the team.
                 These blockers need to be able to read the opponent's attackers to quickly raise there arms above the net to block.
@@ -115,7 +115,7 @@
         </div>
 
         <div class="marginbox">
-            <img class="goRight" src="../images/" alt="Libero">
+            <img class="goRight" src="../images/libero.jpeg" alt="Libero">
             <h4>Libero</h4>
             <p class="alignText">The libero is a player position that only plays on the back row of the court. They are the key defense to
                 receiving the hit from the opposite team. There are certain rules that libero needs to follow like not hitting
@@ -123,7 +123,7 @@
         </div>
 
         <div class="marginbox">
-            <img class="goLeft" src="../images/" alt="Defensive Specialist">
+            <img class="goLeft" src="../images/defensive_specialist.jpeg" alt="Defensive Specialist">
             <h4>Defensive Specialist</h4>
             <p>The defensive specialist are able to substitute out any player on the court. However, their main focus is on ball
                 control and passing. They work with the libero in the back row. </p>
