--- a/html/rules.html
+++ b/html/rules.html
@@ -15,7 +15,7 @@
 </head>
 
 <header>
-    <img align="left" src="../images/" alt="Volleyball Logo" height="80">
+    <img align="left" src="../images/volleyball_logo.jpeg" alt="Volleyball Logo" height="80">
     <h2><b>Rules to Follow in Volleyball</b></h2>
 </header>
 
@@ -98,7 +98,7 @@
 
     <div class="asideRight">
         <aside>
-            <img src="../images/.." alt="empty picture">
+            <img src="../images/vball_rules.jpeg" alt="rules">
         </aside>
     </div>
 
