--- a/html/history.html
+++ b/html/history.html
@@ -79,7 +79,7 @@
 </div>
 
     <div class="image">
-        <img src="../images/history_picture.png" alt="History Picture">
+        <img src="../images/history_picture.jpeg" alt="History Picture">
     </div>
 
     <h6><b><em>Fun Fact: Volleyball is 127 years old</em></b></h6>
