--- a/html/rules.html
+++ b/html/rules.html
@@ -98,7 +98,7 @@
 
     <div class="asideRight">
         <aside>
-            <img src="../images/vball_rules.jpeg" alt="rules">
+            <img src="../images/vball_rules.jpeg" alt="rules" height="400px" width="40%">
         </aside>
     </div>
 
